Ensure the whole of a list can be scrolled through even on mobile.

--- a/resources/public/toto.css
+++ b/resources/public/toto.css
@@ -135,6 +135,7 @@ body {
 .scrollable {
     flex: 1;
     overflow-y: scroll;
+    padding-bottom: 60px;
 }
 
 .new-item-form {
@@ -357,6 +358,10 @@ A {
     overflow-y: hidden;
 }
 
+.scrollable .list-list {
+    width: 100%;
+}
+
 /* Toplevel list styling */
 
 .toplevel-list tr {
@@ -364,8 +369,8 @@ A {
 }
 
 .toplevel-list td {
-    padding-top: 0.45em;
-    padding-bottom: 0.45m;
+    padding-top: 0.66em;
+    padding-bottom: 0.66m;
 }
 
 
